--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -5,4 +5,15 @@ sky:
     port: 3306
     database: sky_take_out
     username: root
-    password: root
+    password: lyf08122828
+
+  alioss:
+    endpoint: oss-cn-shanghai.aliyuncs.com
+    access-key-id:
+    access-key-secret:
+    bucket-name: yufan-sky-take-out
+
+  redis:
+    host: localhost
+    post: 6379
+    database: 0
